[ADD] stripe setup for products

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,5 +3,8 @@
 @import "./helpers/vars";
 @import "./helpers/fonts";
 
-// Helpers ----------------------------------
+// Layout ----------------------------------
 @import "./layout/global";
+
+// Components ----------------------------------
+@import "./components/buttons";
