--- a/assets/sass/helpers/_vars.scss
+++ b/assets/sass/helpers/_vars.scss
@@ -11,3 +11,35 @@ $font-body: hk-grotesk, "Helvetica Neue", Inter, -apple-system,
   sans-serif;
 $font-heading: gulax, "Helvetica Neue", Inter, -apple-system, BlinkMacSystemFont,
   "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
+
+// Spacing --------------------------------------
+$sp1: 1em;
+$sp2: 1.5em;
+$sp3: 2em;
+$sp4: 2.5em;
+$sp5: 3em;
+
+// Breakpoints --------------------------------------
+@mixin breakpoint($point) {
+  @if $point == desktop {
+    @media (min-width: 70em) {
+      @content;
+    }
+  } @else if $point == laptop {
+    @media (min-width: 64em) {
+      @content;
+    }
+  } @else if $point == tablet {
+    @media (min-width: 50em) {
+      @content;
+    }
+  } @else if $point == phablet {
+    @media (min-width: 37.5em) {
+      @content;
+    }
+  } @else if $point == mobileonly {
+    @media (max-width: 37.5em) {
+      @content;
+    }
+  }
+}
