--- a/assets/sass/layout/global.scss
+++ b/assets/sass/layout/global.scss
@@ -2,6 +2,7 @@ body,
 html {
   background-color: $color-light;
   color: $color-dark;
+  font-size: 16px;
 }
 
 // Typography --------------------------------
@@ -22,4 +23,29 @@ h4,
 .nav-item {
   font-family: $font-heading, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+h1 {
+  font-size: 2em;
+  @include breakpoint(tablet) {
+    font-size: 3rem;
+  }
+}
+
+h2 {
+  font-size: 1.5rem;
+  @include breakpoint(tablet) {
+    font-size: 2.5rem;
+  }
+}
+
+h3 {
+  font-size: 1.25rem;
+  @include breakpoint(tablet) {
+    font-size: 2rem;
+  }
+}
+
+h4 {
+  font-size: 1.15rem;
 }
