--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -8,3 +8,6 @@
 
 // Components ----------------------------------
 @import "./components/buttons";
+
+// Pages ----------------------------------
+@import "./pages/shop";
